# modern-rt-audio-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CXXStandard.cmake  ChooseBackend.cmake
dsp/: LFODelayLine.cpp  LFODelayLine.h
projects/: CMakeLists.txt
projects/hello_rtneural/: hello_rtneural.cpp
projects/torch_gru/: torch_gru.cpp
projects/torch_gru_chowtape/: CMakeLists.txt  torch_gru_chowtape.cpp
source/: Plugin.cpp  Plugin.h  PluginEditor.cpp  PluginEditor.h
test_data/: gru_torch_chowtape_y_python.csv  gru_torch_y_python.csv
weights/: gru_torch.json  gru_torch_chowtape.json
